--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">dsadsd</div>
+    <div id="root">Nothing to display!</div>
   </body>
 </html>
